--- a/syllabus/index.qmd
+++ b/syllabus/index.qmd
@@ -123,6 +123,9 @@ Security: Planning for Success](https://web.njit.edu/~rt494/security/)
 - {{< iconify fa6-solid book-open >}} Online textbook called [Cracking Codes
 with Python](https://inventwithpython.com/cracking/) 
 
+- {{< iconify fa6-solid book-open >}} Online textbook called [Operating Systems:
+Three Easy Pieces](https://pages.cs.wisc.edu/~remzi/OSTEP/) 
+
 Extensive details about the content that the course covers in the textbook are
 available in the [course schedule](../schedule/index.qmd) and the [course
 slides](../slides/index.qmd). To best ensure that learners make a "security
@@ -324,7 +327,9 @@ week of the three modules in the academic semester:
   - *No Discussion Leads for Week Eleven*
 
 - **Module Three**
-  - **Week Eleven**: Caleb Kendra and Nicholas Ingerson-Meacham
+  - **Week Twelve**: Keven Duverglas and Mordred Boulais
+  - **Week Thirteen**: Evan Nelson and Nicholas Ingerson-Meacham
+  - **Week Fifteen**: Miles Franck and Caleb Kendra
 
 #### Seeking Assistance
 
