fix: Revise and extend the discussion lead details for last module in syllabus/index.qmd.

--- a/syllabus/index.qmd
+++ b/syllabus/index.qmd
@@ -329,7 +329,9 @@ week of the three modules in the academic semester:
 - **Module Three**
   - **Week Twelve**: Keven Duverglas and Mordred Boulais
   - **Week Thirteen**: Evan Nelson and Nicholas Ingerson-Meacham
-  - **Week Fifteen**: Miles Franck and Caleb Kendra
+  - **Week Fourteen**: Caleb Kendra and Hank Grefenstette
+  - **Week Fifteen**: Miles Franck and Jason Gyamafi
+  - *No Discussion Leads for Week Sixteen*
 
 #### Seeking Assistance
 
