--- a/syllabus/index.qmd
+++ b/syllabus/index.qmd
@@ -326,8 +326,8 @@ security summit projects. Outside of these two tokens, the instructor will not
 consider any additional requests for deadline extensions or project
 reassessment. The instructor will submit to a student the assessment for work
 revised as part of token used at the end of a course module. Unless there are
-extenuating circumstances, you may not spend any tokens in the last two weeks of
-the semester.
+documented severe and extenuating circumstances, you may not spend any tokens in
+the last two weeks of the semester.
 
 ##### Course Attendance
 
