--- a/syllabus/index.qmd
+++ b/syllabus/index.qmd
@@ -279,15 +279,15 @@ evaluation, and writing.
 academic semester, this long-term project invites students to propose,
 implement, evaluate, and present their own advanced project in the field of
 computer security. In addition to requiring the completion of a significant and
-innovative software tool, this project also invites students to complete a
-series of presentations and reports. These projects should clearly demonstrate a
-"security synapse" both through the connection between high-level concepts and
-their low-level implementation and technical concepts discussed in the course
-and their practical application to the secure use of real-world computer
-software. Students may use external sources, including artificial intelligence
-coding assistants, during the completion of this project provided that they cite
-these sources and explain how they used them to complete the various components
-of their work.
+innovative software tool, this project invites students to complete a series of
+presentations and reports. These projects should clearly demonstrate a "security
+synapse" both through the connection between high-level concepts and their
+low-level implementation and technical concepts discussed in the course and
+their practical application to the secure use of real-world computer software.
+Students may use external sources, including artificial intelligence coding
+assistants, during the completion of this project provided that they cite these
+sources and explain how they used them to complete the various components of
+their work.
 
 #### Assessment Policies
 
