--- a/slides/weektwo/index.qmd
+++ b/slides/weektwo/index.qmd
@@ -165,17 +165,17 @@ these programs? How could they be *prevented* and *detected*? What should be the
 
 # Let's Make a Computer Security Synapse!
 
-- Encrypt a file using a symmetric key
+- Obfuscate a file using a symmetric key
 - Compute the SHA256 hash of a file
 - Illustrate an insecure memory access
 
-## Computing a File's Hash
+## Obfuscating a File
 
 ```{python}
-import json, hashlib
+import json, hashlib, base64
 
-def compute_hash(file_path):
-    """Compute the SHA256 hash of a file."""
+def obfuscate_file(file_path: str, key: str):
+    """Obfuscate a file using a symmetric key."""
     with open(file_path, 'r') as file:
         data = json.load(file)
     # convert the dictionary into a string
@@ -183,13 +183,22 @@ def compute_hash(file_path):
     # create a new SHA256 hash object
     hash_object = hashlib.sha256()
     # update the hash object with the bytes of the string
-    hash_object.update(data_string.encode())
+    hash_object.update((data_string + key).encode())
     # get the hexadecimal representation of the hash
     hash_hex = hash_object.hexdigest()
-    return hash_hex
+    # encode the hash in Base64 for obfuscation
+    obfuscated_data = base64.b64encode(hash_hex.encode())
+    # return the obfuscated data
+    return obfuscated_data
 
-# original file: security.json
-print(compute_hash('security.json'))
+# define a symmetric key (must be kept secret)
+key = "f3d1d0c4-9b7f-4f5f-8f2b-3b1d1f2b1d1f"
+# obfuscate and display the file
+obfuscated_data = obfuscate_file('security.json', key)
+# save the obfuscated data to a file
+with open('security-obfuscated.json', 'w') as file:
+  file.write(obfuscated_data.decode())
+print(obfuscated_data)
 ```
 
 ## What Does the JSON File Look Like?
