--- a/slides/weektwo/index.qmd
+++ b/slides/weektwo/index.qmd
@@ -163,12 +163,13 @@ these programs? How could they be *prevented* and *detected*? What should be the
 
 # *Implementation*: which languages are reputed to be the most or least secure? Why? Do you agree with consensus?
 
-# Let's Make a Computer Security Synapse!
+# Let's Make a Computer Security Synapse
 
 - Obfuscate a file using a symmetric key
 - Compute the SHA256 hash of a file
 - Illustrate an insecure memory access
 - Use a synthetic JSON file to illustrate concepts
+- Make sure to `pip install cryptography`!
 
 ## What Does the JSON File Look Like?
 
@@ -196,6 +197,67 @@ these programs? How could they be *prevented* and *detected*? What should be the
     ]
 }
 ```
+
+## Encrypting a File
+
+```{python}
+from cryptography.fernet import Fernet
+import json
+
+def encrypt_file(file_path: str, key: str):
+    """Encrypt a file using a symmetric key."""
+    # load the file
+    with open(file_path, 'r') as file:
+        data = json.load(file)
+    # convert the dictionary into a string
+    data_string = json.dumps(data, sort_keys=True)
+    # create a Fernet object
+    fernet = Fernet(key)
+    # encrypt and return the data
+    encrypted_data = fernet.encrypt(data_string.encode())
+    return encrypted_data
+
+# Generate a key
+key = Fernet.generate_key()
+# encrypt the file
+encrypted_data = encrypt_file('security.json', key)
+```
+
+## Showing the Encrypted File
+
+```{python}
+# Generate a key
+key = Fernet.generate_key()
+# encrypt the file
+encrypted_data = encrypt_file('security.json', key)
+print(encrypted_data)
+```
+
+::: {.fragment .fade-up style="margin-top: 0.25em; font-size: 0.95em;"}
+
+- Output will vary each time `encrypt_file` is called
+- Is it possible to retrieve the original JSON file?
+
+:::
+
+## Decrypting a File
+
+```{python}
+def decrypt_file(encrypted_data, key):
+    """Decrypt data using a symmetric key."""
+    # Create a Fernet object
+    fernet = Fernet(key)
+    # Decrypt the data
+    decrypted_data = fernet.decrypt(encrypted_data)
+    # Convert the decrypted data back into a dictionary
+    original_data = json.loads(decrypted_data.decode())
+    return original_data
+
+# decrypt the data
+original_data = decrypt_file(encrypted_data, key)
+print("\n" + str(original_data) + "\n")
+```
+
 
 ## Computing a File's Hash
 
