--- a/slides/index.qmd
+++ b/slides/index.qmd
@@ -30,6 +30,9 @@ Security: Planning for Success](https://web.njit.edu/~rt494/security/)
 - {{< iconify fa6-solid book-open >}} Online textbook called [Cracking Codes
 with Python](https://inventwithpython.com/cracking/) 
 
+- {{< iconify fa6-solid book-open >}} Online textbook called [Operating Systems:
+Three Easy Pieces](https://pages.cs.wisc.edu/~remzi/OSTEP/) 
+
 Make sure to review the [course syllabus](../syllabus/index.qmd) and the
 [course schedule](../schedule/index.qmd) for more details about how these
 slides connect to various course activities and projects.
