--- a/slides/weekthree/index.qmd
+++ b/slides/weekthree/index.qmd
@@ -51,77 +51,15 @@ format:
 
 :::
 
-## Overall goals of "security synapse"
-
-::: {.fragment .fade-right}
-
-- **High-Level Concepts**
-  - Concepts such as *confidentiality* and *integrity*
-  - Test all aspects of the system to ensure correctness
-  - Make a benchmark framework to measure performance
-- **Low-Level Implementation Details**
-  - Use cryptography to secure transferred data
-  - Use hashing to verify data integrity
-  - Secure implementation in programming languages
-
-:::
-
-# *Implementation*: which languages are reputed to be the most or least secure? Why? Do you agree with consensus?
-
-# Let's Make a Computer Security Synapse
-
-- Obfuscate a file using a symmetric key
-- Compute the Sha256 hash of a file
-- Illustrate an insecure memory access
-- Use a synthetic JSON file to illustrate concepts
-- Make sure to `pip install cryptography`!
-
-## Getting Started in Computer Security
-
-::: {.columns}
-
-::: {.column style="font-size: 0.85em;"}
+# Cryptography Terminology
 
 ::: fragment
 
-### *Learn the Lingo*
-
-#### Abbreviations
-
-- AAA
-- CIA
-- PDR
-
-#### Concepts
-
-- Authentication
-- Authorization
-- Cryptography
-
-:::
-
-:::
-
-::: {.column style="font-size: 0.85em;"}
-
-::: fragment
-
-### *Think Like Hacker*
-
-#### Implementation
-
-- Look for vulnerabilities
-- Try to exploit them
-- Identify weakest links
-
-#### Prevention
-
-- Use secure coding practices
-- Leverage security tools
-- Rethink everything!
-
-:::
-
-:::
+- **Plaintext**: the original message
+- **Ciphertext**: the encrypted message
+- **Cipher**: the algorithm used to encrypt the message
+- **Key**: the secret used to encrypt the message
+    - **Symmetric Key**: the same key  to encrypt and decrypt
+    - **Asymmetric Key**: different keys to encrypt and decrypt
 
 :::
