feat: Add a review slide to the slides/weekthree/index.qmd.

--- a/slides/weekthree/index.qmd
+++ b/slides/weekthree/index.qmd
@@ -19,6 +19,56 @@ format:
     footer: "Security Synapse"
 ---
 
+## Getting Started in Computer Security
+
+::: {.columns}
+
+::: {.column style="font-size: 0.85em;"}
+
+::: fragment
+
+### *Learn the Lingo*
+
+#### Abbreviations
+
+- AAA
+- CIA
+- PDR
+
+#### Concepts
+
+- Authentication
+- Authorization
+- Cryptography
+
+:::
+
+:::
+
+::: {.column style="font-size: 0.85em;"}
+
+::: fragment
+
+### *Think Like Hacker*
+
+#### Implementation
+
+- Look for vulnerabilities
+- Try to exploit them
+- Identify weakest links
+
+#### Prevention
+
+- Use secure coding practices
+- Leverage security tools
+- Rethink everything!
+
+:::
+
+:::
+
+:::
+
 # What is cryptography?
 
 ::: {.incremental style="margin-top: -0.5em;"}
@@ -62,4 +112,19 @@ format:
     - **Symmetric Key**: the same key  to encrypt and decrypt
     - **Asymmetric Key**: different keys to encrypt and decrypt
 
+:::
+
+## Trapdoor Functions
+
+::: {.incremental style="margin-top: -0.5em;"}
+
+- **One-way function**: easy to compute, hard to invert
+- **Examples**: RSA, Diffie-Hellman, Digital Signatures
+- Insights about the RSA algorithm:
+    - Easy to multiply two large prime numbers
+      - Exponentiation
+      - Multiplication
+      - Modular arithmetic
+    - Hard to factor the product of two large prime numbers
+    - Encryption is "easy" and decryption is "hard"
 :::
