--- a/slides/weekthree/index.qmd
+++ b/slides/weekthree/index.qmd
@@ -9,7 +9,7 @@ execute:
   echo: true
 jupyter: python3
 format:
-  revealjs:
+  live-revealjs:
     theme: default
     css: ../css/styles.css
     history: false
@@ -267,3 +267,28 @@ that we use on a daily basis! Let's try to program them for better
 understanding! Start by revisiting basics from last week!
 
 :::
+
+## Revisiting Symmetric Encryption
+
+```{pyodide}
+#| autorun: false
+#| max-lines: 15
+from cryptography.fernet import Fernet
+import json
+
+def encrypt_string(input_string: str, key: str):
+    """Encrypt a string using a symmetric key."""
+    # convert the string into bytes
+    data_bytes = input_string.encode()
+    # create a Fernet object
+    fernet = Fernet(key)
+    # encrypt and return the data
+    encrypted_data = fernet.encrypt(data_bytes)
+    return encrypted_data
+
+# generate a symmetric key
+key = Fernet.generate_key()
+# encrypt the string
+encrypted_data = encrypt_string('Privacy-sensitive data', key)
+print(encrypted_data)
+```
