--- a/slides/weekthree/index.qmd
+++ b/slides/weekthree/index.qmd
@@ -270,7 +270,7 @@ understanding! Start by revisiting basics from last week!
 
 # Security Synapses
 
-::: incremental
+::: {.incremental style="margin-top: -0.25em;"}
 
 - Use `cryptography.fernet` to encrypt a string and record
     - Automatically generate a symmetric key
@@ -279,7 +279,7 @@ understanding! Start by revisiting basics from last week!
     - Define the `encrypted_data` byte-encoded string
     - Define the `key` as a byte-encoded string
 - Confirm that decrypted string matches the original one
-- **All in an interactive Python programming environment**!
+- **Variables are shared across programming environments**!
 
 :::
 
@@ -301,11 +301,11 @@ def encrypt_string(input_string: str, key: str):
     return encrypted_data
 
 # generate a symmetric key
-key = Fernet.generate_key()
-print("Key:", key)
+generated_key = Fernet.generate_key()
+print("Key:", generated_key)
 # encrypt the string
-encrypted_data = encrypt_string('Privacy-sensitive data', key)
-print("Encrypted Data:", encrypted_data)
+encrypted_data_output = encrypt_string('Privacy-sensitive data', generated_key)
+print("Encrypted Data:", encrypted_data_output)
 ```
 
 ## Revisiting Symmetric Decryption
@@ -324,8 +324,8 @@ def decrypt_string(encrypted_data: bytes, key: str):
     return decrypted_data.decode()
 
 # decrypt the string
-encrypted_data = b'<add data here>'
-key = b'<add key here>'
+encrypted_data = b'<add encrypted data here>'
+key = b'<add generated key here>'
 decrypted_data = decrypt_string(encrypted_data, key)
 print(decrypted_data)
 ```
