--- a/slides/weekthree/index.qmd
+++ b/slides/weekthree/index.qmd
@@ -287,7 +287,7 @@ understanding! Start by revisiting basics from last week!
 
 ```{pyodide}
 #| autorun: true
-#| max-lines: 15
+#| max-lines: 14
 from cryptography.fernet import Fernet
 
 def encrypt_string(input_string: str, key: str):
@@ -312,7 +312,7 @@ print("Encrypted Data:", encrypted_data_output)
 
 ```{pyodide}
 #| autorun: false
-#| max-lines: 15
+#| max-lines: 14
 from cryptography.fernet import Fernet
 
 def decrypt_string(encrypted_data: bytes, key: str):
@@ -349,3 +349,26 @@ print(decrypted_data)
     - How can you securely exchange the `key`'s contents?
 
 :::
+
+## Revisiting Content Hashing
+
+```{pyodide}
+#| autorun: true
+#| max-lines: 14
+import hashlib
+
+def compute_hash(input_string):
+    """Compute the SHA256 hash of a string."""
+    # create a new SHA256 hash object
+    hash_object = hashlib.sha256()
+    # update the hash object with the bytes of the string
+    hash_object.update(input_string.encode())
+    # get the hexadecimal representation of the hash
+    hash_hex = hash_object.hexdigest()
+    return hash_hex
+
+# test string: 'This is a test string'
+print(compute_hash('This is a test string'))
+# create your own strings and display their hashes
+# make one string slightly different than the test string!
+```
